# clippyshot

./: .dockerignore  .gitattributes  .gitignore  LICENSE  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml  run_tests.sh
deploy/apparmor/: README.md  clippyshot-bwrap  clippyshot-nsjail  clippyshot-runtime  clippyshot-soffice
deploy/docker/: .dockerignore  Dockerfile  README.md  clippyshot-compose  docker-compose.firecracker.yml  docker-compose.gvisor.yml  docker-compose.yml
deploy/docker/postgres/: Dockerfile  init-bktree.sql
deploy/seccomp/: README.md  clippyshot.seccomp.json  clippyshot.seccomp.policy
docs/: CONFIGURATION.md
docs/plans/: 2026-06-08-clippyshot-cutover-to-blastbox-host.md
scripts/: collect_and_submit.py
src/clippyshot/: __init__.py  _argv.py  api.py  blastbox_ingress.py  cli.py  converter.py  detector.py  dispatcher.py  engine.py  errors.py  hasher.py  limits.py  ocr.py  qr.py  selftest.py  setup_sandbox.py  trimmer.py  types.py  worker.py
src/clippyshot/jobs/: __init__.py  base.py  memory.py  redis_store.py  retention.py  sql_store.py
src/clippyshot/libreoffice/: __init__.py  _pipe_convert.py  _safexml.py  _safezip.py  altchunk.py  mht_unpack.py  profile.py  runner.py  sheet_prep.py  uno.py  uno_pipe.py
src/clippyshot/observability/: __init__.py  logging.py  metrics.py
src/clippyshot/rasterizer/: __init__.py  base.py  pdfium.py  pdftoppm.py
src/clippyshot/runtime/: __init__.py  docker_runtime.py  host_limits.py
src/clippyshot/sandbox/: __init__.py  base.py  bwrap.py  container.py  detect.py  nono_wrap.py  nsjail.py
src/clippyshot/static/: index.html
tests/: conftest.py
tests/cli/: test_cli.py
tests/docker/: test_image.py  test_runsc_worker.py
tests/fixtures/: build_malicious_fixtures.py  build_safe_fixtures.py
tests/fixtures/malicious/: README.md  external_image.docx  macro_autoopen.odt  ole_link.rtf  sleeper.csv
tests/fixtures/safe/: fixture.doc  fixture.docx  fixture.md  fixture.odg  fixture.odp  fixture.ods  fixture.odt  fixture.ppt  fixture.pptx  fixture.rtf  fixture.txt  fixture.xls  fixture.xlsx  spoofed.docx  tiny.docx  tiny.txt
tests/http/: test_api.py  test_blastbox_ingress.py  test_pdf_endpoint.py  test_qr_ocr_params.py
tests/integration/: conftest.py  escape_probe.c  test_blastbox_roundtrip.py  test_detonator_roundtrip.py  test_format_families.py  test_sandbox_escape.py  test_scanner_sandboxes.py  test_security_assertions.py
tests/unit/: test_altchunk.py  test_apparmor_attach.py  test_audit_fixes.py  test_compose_stack.py  test_convert_options.py  test_converter.py  test_converter_pdf_preserved.py  test_converter_scanner_failure.py  test_detector.py  test_dispatcher.py  test_docker_docs.py  test_docker_runtime.py  test_engine_convert_options.py  test_engine_warmup.py  test_extraction_caps.py  test_hasher.py  test_job_retention.py  test_jobs.py  test_libreoffice_profile.py  test_libreoffice_runner.py  test_limits.py  test_limits_page_ops.py  test_metadata_schema_stable.py  test_mht_unpack.py  test_nono_wrap.py  test_observability.py  test_ocr.py  test_ocr_image_gating.py  test_qr_parser.py  test_qr_scan.py  test_rasterizer.py  test_sandbox_base.py  test_sandbox_bwrap.py  test_sandbox_container.py  test_sandbox_detect.py  test_sandbox_nsjail.py  test_sandbox_seccomp.py  test_sandbox_seccomp_integration.py  test_scanner_image_selection.py  test_setup_sandbox.py  (+7 more)
