[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clippyshot"
version = "0.1.0"
description = "Sandboxed LibreOffice document-to-image renderer with perceptual hashing"
license = {text = "MIT"}
requires-python = ">=3.12"
# Lean core: the engine + the in-process `convert`/`selftest` CLI + the perceptual
# pipeline. The HOST (ingress/dispatch/jobstore/runtime) is provided by blastbox.host
# — ClippyShot runs ON it, so the heavy host deps (fastapi/uvicorn/psycopg/redis/
# multipart) come via `clippyshot[host]` -> `blastbox[host]`, NOT core. structlog +
# prometheus stay: the pipeline's observability (record_conversion/set_sandbox_backend)
# uses them.
dependencies = [
    "magika>=0.5.1",
    "rosetta-squint>=1.1.0",
    "Pillow>=11.0.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.20.0",
    "pypdf>=4.0.0",
    "pypdfium2>=4.30.0",
    "python-magic>=0.4.27",
    "olefile>=0.46",
    "blastbox>=0.1.12",
]

[project.optional-dependencies]
# Run the host (ingress + dispatcher) from the ClippyShot image: pulls the full
# blastbox host stack (fastapi/uvicorn/psycopg/redis/...). The cold worker only
# needs core (blastbox.worker.cold + the engine).
host = ["blastbox[host]>=0.1.12"]
dev = [
    "blastbox[host]>=0.1.12",     # the ingress/extension tests import blastbox.host.ingress.app
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "fakeredis>=2.21.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[project.scripts]
clippyshot = "clippyshot.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
clippyshot = ["static/*.html", "static/*.css", "static/*.js", "static/assets/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra -q"
markers = [
    "integration: requires real soffice and sandbox backend (slow)",
    "docker: requires docker daemon",
]
asyncio_mode = "auto"

[[tool.mypy.overrides]]
# pyuno (uno, com.sun.star.*) is provided by LibreOffice's interpreter at runtime and is
# absent in the type-check/dev env. It is used only by the executed-not-imported pipe client
# (clippyshot/libreoffice/_pipe_convert.py).
module = ["uno", "com.sun.star.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# olefile ships no type stubs (used for OLE structural sniffing in detector/sheet_prep).
module = ["olefile"]
ignore_missing_imports = true
